--- a/4.git常用命令.md
+++ b/4.git常用命令.md
@@ -2,4 +2,10 @@
 ``` git push -u origin feature /  git push --set-upstream origin feature ```
 
 
-这是一封离别信
+测试的watch模式
+按f键：只运行失败的测试用例
+按o键：只运行发生更改的测试用例
+按p键：按文件名regex模式进行筛选
+按t键：按测试名称regex模式进行筛选
+按q键：退出监测模式
+按Enter键：触发测试用例
